# this_file: pyproject.toml
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ezgooey"
authors = [
    {name = "Adam Twardoch", email = "adam+github@twardoch.com"},
]
description = "Simplifies making GUI+CLI apps with Gooey"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
]
keywords = ["gooey", "gui", "cli", "argparse", "desktop"]
dependencies = [
    "wxPython>=4.1.1",
    "Gooey>=1.0.8",
    "colored>=1.4.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://twardoch.github.io/ezgooey/"
Documentation = "https://twardoch.github.io/ezgooey/"
Repository = "https://github.com/twardoch/ezgooey"
Issues = "https://github.com/twardoch/ezgooey/issues"
Changelog = "https://github.com/twardoch/ezgooey/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
    "build>=0.9.0",
    "hatch-vcs",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "2.7.5"

[tool.hatch.build.hooks.vcs]
version-file = "ezgooey/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/ezgooey", "/tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["ezgooey"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["ezgooey"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["ezgooey"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
